# 2025-llm-app

./: .gitignore  README.md  hello.py  pyproject.toml
app/: app.py
