[project]
name = "2025-llm-app2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.400",
    "langchain-community>=0.3.20",
    "langchain>=0.3.22",
    "pdfplumber>=0.11.6",
    "chromadb>=0.6.3",
    "langchain-chroma>=0.2.2",
    "langchain-ollama>=0.3.0",
]
